--- a/index.html
+++ b/index.html
@@ -16,25 +16,26 @@
   <body>
     <section class="form-container">
       <div class="container-fluid">
-        <form class="form-signup" novalidate>
+        <form class="form-signup" onclick="return validar()" novalidate>
           <h2 id="form-signup-heading">
             Bicis Locas
           </h2>
           <div class="name-container input-box">
             <label for="name" class="sr-only">Nombre</label>
             <input type="text" id="name" class="form-control"
-            placeholder="Ingrese su nombre">
+            placeholder="Ingrese su nombre" autofocus="" onkeyup="validacion1()" onkeydown="validacion2(event)">
+            
           </div>
           <div class="lastname-container input-box">
             <label for="lastname" class="sr-only">Apellido</label>
             <input type="text" id="lastname" class="form-control"
-            placeholder="Ingrese su apellido">
+            placeholder="Ingrese su apellido" onkeyup="validacionApellido()" onkeydown="validacioLastname(event)">
           </div>
           <div class="email-container input-box">
             <label for="inputEmail" class="sr-only">
               Correo Electrónico
             </label>
-            <input type="email" id="input-email" class="form-control" placeholder="Ingrese su correo electrónico" autofocus="">
+            <input type="email" id="input-email" class="form-control" placeholder="Ingrese su correo electrónico">
           </div>
           <div class="form-group input-box">
             <label for="inputPassword" class="sr-only">
@@ -43,7 +44,7 @@
             <input type="password" id="input-password" class="form-control" placeholder="Ingrese su contraseña">
           </div>
           <div class="form-group input-box">
-            <select class="form-control">
+            <select class="form-control" id="opciones" name="opciones">
               <option value="0">Selecciona tu tipo de bici</option>
               <option value="urbana">Urbana</option>
               <option value="treking">Treking</option>
