--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <section class="form-container">
       <div class="container-fluid">
-        <form class="form-signup" onclick="return validar()" novalidate>
+        <form class="form-signup" onsubmit="return validar()" novalidate>
           <h2 id="form-signup-heading">
             Bicis Locas
           </h2>
