--- a/index.html
+++ b/index.html
@@ -16,35 +16,35 @@
   <body>
     <section class="form-container">
       <div class="container-fluid">
-        <form class="form-signup" onsubmit="return validar()" novalidate>
+        <form class="form-signup" novalidate>
           <h2 id="form-signup-heading">
             Bicis Locas
           </h2>
           <div class="name-container input-box">
             <label for="name" class="sr-only">Nombre</label>
             <input type="text" id="name" class="form-control"
-            placeholder="Ingrese su nombre" autofocus="" onkeyup="validacion1()" onkeydown="validacion2(event)">
+            placeholder="Ingrese su nombre" autofocus="" onkeyup="validacion1()">
             
           </div>
           <div class="lastname-container input-box">
             <label for="lastname" class="sr-only">Apellido</label>
             <input type="text" id="lastname" class="form-control"
-            placeholder="Ingrese su apellido" onkeyup="validacionApellido()" onkeydown="validacioLastname(event)">
+            placeholder="Ingrese su apellido" onkeyup="validacionApellido()">
           </div>
           <div class="email-container input-box">
             <label for="inputEmail" class="sr-only">
               Correo Electrónico
             </label>
-            <input type="email" id="input-email" class="form-control" placeholder="Ingrese su correo electrónico">
+            <input type="email" id="input-email" class="form-control" placeholder="Ingrese su correo electrónico" onkeyup="validateCorreo()">
           </div>
           <div class="form-group input-box">
             <label for="inputPassword" class="sr-only">
               Contraseña
             </label>
-            <input type="password" id="input-password" class="form-control" placeholder="Ingrese su contraseña">
+            <input type="password" id="input-password" class="form-control" placeholder="Ingrese su contraseña" onkeyup="validatePassword()">
           </div>
           <div class="form-group input-box">
-            <select class="form-control" id="opciones" name="opciones">
+            <select class="form-control" id="opciones" name="opciones" onchange="validateOpciones(event)">
               <option value="0">Selecciona tu tipo de bici</option>
               <option value="urbana">Urbana</option>
               <option value="treking">Treking</option>
@@ -63,6 +63,7 @@
             </label>
           </div>
           <button class="btn btn-lg btn-primary btn-block submit-btn" type="submit">Registrar</button>
+          <div id="mensaje"></div>
         </form>
       </div>  
     </section>
